# fastapi-clean-architecture

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: e4d972fa96a4_initial_migration.py
src/: main.py
src/application/use_cases/: user_use_case.py
src/core/: config.py  dependencies.py  exceptions.py
src/domain/models/: user.py
src/domain/repositories/: user_repository.py
src/infrastructure/database/: base.py
src/infrastructure/database/models/: user.py
src/infrastructure/repositories/: user_repository_impl.py
src/infrastructure/security/: hash.py  jwt.py
src/interfaces/api/: router.py
src/interfaces/api/v1/: user.py
src/interfaces/controllers/: user_controller.py
tests/: conftest.py
tests/integration/api/v1/: test_user.py
tests/unit/: test_main.py
tests/unit/application/use_cases/: test_user_use_case.py
tests/unit/core/: test_dependencies.py  test_exceptions.py
tests/unit/domain/repositories/: test_user_repository.py
tests/unit/infrastructure/database/: test_base.py
tests/unit/infrastructure/repositories/: test_user_repository_impl.py
tests/unit/infrastructure/security/: test_hash.py
tests/unit/interfaces/controllers/: test_user_controller.py
